# restful/nodejs/src/router.ts
@@ -11,9 +11,24 @@ const customCss = readFileSync('swagger.css', 'utf8')
 
 // app modules
 router.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument, { customCss }))
-router.use('/auth', authModule)
+router.use('/auth', authModule
+    /*
+        #swagger.tags = ['Auth']
+             #swagger.security = [{
+                "bearerAuth": []
+             }] 
+    */
+)
+
 router.use('*', authMiddleware)
-router.use('/clients', clientsModule)
+router.use('/clients', clientsModule
+    /*
+    #swagger.tags = ['Clients']
+         #swagger.security = [{
+            "bearerAuth": []
+         }] 
+*/
+)
 
 // swagger documentation setup
 router.use(middlewares.notFound)
