# springboot/src/main/java/me/regisndiziihiwe/LearnSecurity/auth/AuthController.java
@@ -1,0 +1,45 @@
+package me.regisndiziihiwe.LearnSecurity.auth;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.web.bind.annotation.RestController;
+
+import lombok.RequiredArgsConstructor;
+import me.regisndiziihiwe.LearnSecurity.auth.exceptions.UsernameTakenException;
+import me.regisndiziihiwe.LearnSecurity.utils.ErrorResponse;
+
+@RestController
+@RequestMapping("/api/v1/auth")
+@RequiredArgsConstructor
+public class AuthController {
+
+    private final AuthService authService;
+
+    @PostMapping("/signup")
+    public ResponseEntity<AuthenticationResponse> register(
+            @RequestBody RegisterDTO dto) {
+
+        return ResponseEntity.ok(authService.register(dto));
+
+    }
+
+    @PostMapping("/login")
+    public ResponseEntity<AuthenticationResponse> register(
+            @RequestBody LoginDTO dto) {
+        return ResponseEntity.ok(authService.login(dto));
+    }
+
+
+
+    @ExceptionHandler(value = UsernameTakenException.class)
+    @ResponseStatus(HttpStatus.CONFLICT)
+    public ErrorResponse handleCustomerAlreadyExistsException(UsernameTakenException ex) {
+        return new ErrorResponse(HttpStatus.CONFLICT.value(), ex.getMessage());
+    }
+
+}
